--- a/CV.tex
+++ b/CV.tex
@@ -107,7 +107,7 @@ Advisor: Bor-Yuh Evan Chang
 \section{EXPERIENCE (ACADEMIA)}
 \employer{University of Colorado, Boulder}
 \location{Boulder, CO}
-\dates{2015 -- 2021}
+\dates{2015 - 2021}
 \title{\textbf{Research Assistant}}
 \begin{position}
 Performed research under Prof. Bor-Yuh Evan Chang in the Programming Languages and Verification Group, studying program analysis and verification with a focus on incremental and demand-driven abstract interpretation.
@@ -141,8 +141,8 @@ Performed research under Prof. Michael Wellman in the Strategic Reasoning Group,
 \dates{Feb. 2022 -- present}
 \title{\textbf{Software Engineer}}
 \begin{position}
-  Working in the Continuous Verification Lab on incremental algorithms and infrastructure for the Infer static analyzer.
-  Previously worked on goal-directed symbolic execution of LLVM bitcode.
+  Working on incremental algorithms and infrastructure for the Infer static analyzer, as a member of the Research on Analysis and Languages at Meta (ReaLM) team.
+  Previously worked on goal-directed symbolic execution of LLVM bitcode as a member of the Continuous Verification Lab.
 \end{position}
 
 \employer{Facebook}
