Add TOPLAS and SkipLabs to CV

--- a/CV.tex
+++ b/CV.tex
@@ -105,13 +105,19 @@ Advisor: Bor-Yuh Evan Chang
 %-------------------------------------------------------------------------------
 
 \section{EXPERIENCE (INDUSTRY)}
-\employer{Meta}
-\location{London, UK}
-\dates{Feb. 2022 -- present}
+\employer{SkipLabs}
+\location{London, UK (remote)}
+\dates{September 2023 -- present}
 \title{\textbf{Software Engineer}}
 \begin{position}
-  Working on incremental algorithms and infrastructure for the Infer static analyzer, as a member of the Research on Analysis and Languages at Meta (ReaLM) team.
-  Previously worked on goal-directed symbolic execution of LLVM bitcode as a member of the Continuous Verification Lab.
+Working on infrastructure for incremental and reactive systems using the Skip programming language.  SkipLabs is an early-stage startup at which I am the fifth engineer.
+\end{position}
+\employer{Meta}
+\location{London, UK}
+\dates{Feb. 2022 -- August 2023}
+\title{\textbf{Software Engineer}}
+\begin{position}
+  Worked on incremental algorithms and infrastructure for the Infer static analyzer, as a member of the Research on Analysis and Languages at Meta (ReaLM) team and goal-directed symbolic execution of LLVM bitcode as a member of the Incorrectness Logic Lab.
 \end{position}
 
 \employer{Facebook}
@@ -188,15 +194,15 @@ Performed research under Prof. Michael Wellman in the Strategic Reasoning Group,
 %Ran TA sessions and one-on-one tutoring sessions and assisted professors in administering lectures, labs, and exams for a broad range of Computer Science courses.
 %\end{position}
 
-\section{CONFERENCE PUBLICATIONS}
+\section{REFEREED PUBLICATIONS}
 {\bf Interactive Abstract Interpretation with Demanded Summarization}\\
-{\bf Benno Stein}, David Flores, Bor-Yuh Evan Chang, and Manu Sridharan.  {\em Under Submission.}\\\vspace{-1em}
+{\bf Benno Stein}, Bor-Yuh Evan Chang, and Manu Sridharan.  2024. In {\em ACM Transactions on Programming Languages and Systems (TOPLAS).}\\\vspace{-1em}
 
 {\bf Demanded Abstract Interpretation}\\
 {\bf Benno Stein}, Bor-Yuh Evan Chang, and Manu Sridharan.  2021. In {\em Proceedings of the ACM SIGPLAN International Conference on Programming Language Design and Implementation (PLDI).}\\\vspace{-1em}
 
 {\bf Static Analysis with Demand-Driven Value Refinement}\\
-{\bf Benno Stein}, Benjamin Barslev Nielsen, Bor-Yuh Evan Chang, and Anders M\o{}ller. 2019. In {\em Proceedings of  the ACM SIGPLAN International Conference on Object-Oriented Programming, Systems, Languages, and Applications (OOPSLA).}\\\vspace{-1em}
+{\bf Benno Stein}, Benjamin Barslev Nielsen, Bor-Yuh Evan Chang, and Anders M\o{}ller. 2019. In {\em Proceedings of the ACM SIGPLAN International Conference on Object-Oriented Programming, Systems, Languages, and Applications (OOPSLA).}\\\vspace{-1em}
 
 {\bf Safe Stream-based Programming with Refinement Types}\\
 {\bf Benno Stein}, Lazaro Clapp, Manu Sridharan, and Bor-Yuh Evan Chang. 2018. In {\em Proceedings of the IEEE/ACM International Conference on Automated Software Engineering (ASE).}
